--- a/themes/freeston/css/base.css
+++ b/themes/freeston/css/base.css
@@ -15,6 +15,10 @@ p {
     margin-top: 12px;
 }
 
+img {
+    max-width: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     margin-bottom: 8px;
