--- a/themes/freeston/css/style.css
+++ b/themes/freeston/css/style.css
@@ -1,5 +1,7 @@
 @import "normalize.css";
 
+/* font definitions */
+
 @font-face {
     font-family: 'Fira Sans Condensed';
     font-style: normal;
@@ -23,6 +25,12 @@
     src: local('Fira Sans Condensed SemiBold'), url(/fonts/FiraSansCondensed-SemiBold.woff2) format('woff2'), url(/fonts/FiraSansCondensed-SemiBold.woff) format('woff');
     font-display: swap;
 }
+
+/* hljs stylesheet */
+
+.hljs{display:block;overflow-x:auto;padding:0.5em;background:#F0F0F0}.hljs,.hljs-subst{color:#444}.hljs-comment{color:#888888}.hljs-keyword,.hljs-attribute,.hljs-selector-tag,.hljs-meta-keyword,.hljs-doctag,.hljs-name{font-weight:bold}.hljs-type,.hljs-string,.hljs-number,.hljs-selector-id,.hljs-selector-class,.hljs-quote,.hljs-template-tag,.hljs-deletion{color:#880000}.hljs-title,.hljs-section{color:#880000;font-weight:bold}.hljs-regexp,.hljs-symbol,.hljs-variable,.hljs-template-variable,.hljs-link,.hljs-selector-attr,.hljs-selector-pseudo{color:#BC6060}.hljs-literal{color:#78A960}.hljs-built_in,.hljs-bullet,.hljs-code,.hljs-addition{color:#397300}.hljs-meta{color:#1f7199}.hljs-meta-string{color:#4d99bf}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}
+
+/* freeston.me stylesheet */
 
 body {
     font-family: 'Fira Sans Condensed', sans-serif;
@@ -107,10 +115,12 @@ footer {
   width: 100%;
   margin-bottom: 0;
 }
+
 .item {
   display: table-cell;
   vertical-align: top;
 }
+
 .item img {
   display: block;
   width: 100%;
