--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,7 @@
 
 /* hljs stylesheet */
 
-.hljs{display:block;overflow-x:auto;padding:0.5em;background:transparent;font-size:1rem}.hljs,.hljs-subst{color:#444}.hljs-comment{color:#888888}.hljs-keyword,.hljs-attribute,.hljs-selector-tag,.hljs-meta-keyword,.hljs-doctag,.hljs-name{font-weight:bold;color:#824e06}.hljs-type,.hljs-string,.hljs-number,.hljs-selector-id,.hljs-selector-class,.hljs-quote,.hljs-template-tag,.hljs-deletion{color:#a15910}.hljs-title,.hljs-section{color:#880000;font-weight:bold}.hljs-regexp,.hljs-symbol,.hljs-variable,.hljs-template-variable,.hljs-link,.hljs-selector-attr,.hljs-selector-pseudo{color:#a26010}.hljs-literal{color:#78A960}.hljs-built_in,.hljs-bullet,.hljs-code,.hljs-addition{color:#397300}.hljs-meta{color:#1f7199}.hljs-meta-string{color:#4d99bf}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}
+.hljs{display:block;overflow-x:auto;padding:0.5em;background:transparent;font-size:1rem}.hljs,.hljs-subst{color:#444}.hljs-comment{color:#888888}.hljs-keyword,.hljs-attribute,.hljs-selector-tag,.hljs-meta-keyword,.hljs-doctag,.hljs-name{font-weight:bold;color:#824e06}.hljs-type,.hljs-string,.hljs-number,.hljs-selector-id,.hljs-selector-class,.hljs-quote,.hljs-template-tag,.hljs-deletion{color:#a15910}.hljs-title,.hljs-section{color:#880000;font-weight:bold}.hljs-regexp,.hljs-symbol,.hljs-variable,.hljs-template-variable,.hljs-link,.hljs-selector-attr,.hljs-selector-pseudo{color:#a26010}.hljs-literal{color:#34632e}.hljs-built_in,.hljs-bullet,.hljs-code,.hljs-addition{color:#397300}.hljs-meta{color:#1f7199}.hljs-meta-string{color:#4d99bf}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:bold}
 
 /* freeston.me stylesheet */
 
@@ -73,7 +73,7 @@ body {
     line-height: 1.3;
     margin: 0 auto;
     padding: 24px;
-    max-width: 32em;
+    max-width: 40em;
     color: var(--text-color);
     background-color: var(--background-color);
 }
@@ -146,11 +146,6 @@ ul.hlist li {
     display: inline;
 }
 
-.footnotes {
-    margin-top: 36px;
-    font-size: smaller;
-}
-
 .date {
     font-style: italic;
 }
@@ -170,6 +165,7 @@ a.title-link:link, a.title-link:visited {
 
 footer {
     margin-top: 48px;
+    font-size: 1rem;
 }
 
 .row {
