--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@
     --text-color: #131516;
     --background-color: #f1efe4;
     --pop-color: #f7e5b7;
-    --dark-pop-color: #f7dd9b;
+    --dark-pop-color:  #ea8f10;
     --title-color: #824e06;
     --link-color: var(--text-color);
     --hover-color: #7f6f61;
@@ -73,7 +73,7 @@ body {
     line-height: 1.3;
     margin: 0 auto;
     padding: 24px;
-    max-width: 40em;
+    max-width: 42rem;
     color: var(--text-color);
     background-color: var(--background-color);
 }
@@ -201,6 +201,11 @@ footer {
     text-decoration: none;
 }
 
+.post-meta > a:hover {
+    color: inherit;
+    background: var(--dark-pop-color);    
+}
+
 /* Home page project grid */
 
 .projects {
@@ -257,7 +262,7 @@ footer {
 }
 
 .cv {
-    max-width: 32em;
+    max-width: 32rem;
 }
 
 .cv ul {
