--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@
     --dark-pop-color:  #ea8f10;
     --title-color: #824e06;
     --link-color: var(--text-color);
-    --hover-color: #7f6f61;
+    --hover-color: var(--dark-pop-color);
 
     /* hljs */
     --hljs-text-color: #444;
@@ -54,7 +54,7 @@
 :root.dark-theme {
     --text-color: #f1efe4;
     --background-color: #25292b;
-    --pop-color: #824e06;
+    --pop-color: #222;
     --dark-pop-color: #ea8f10;
     --title-color: #f7dd9b;
     --link-color: var(--text-color);
@@ -76,7 +76,7 @@
   :root {
       --text-color: #f1efe4;
       --background-color: #25292b;
-      --pop-color: #824e06;
+      --pop-color: #222;
       --dark-pop-color: #ea8f10;
       --title-color: #f7dd9b;
       --link-color: var(--text-color);
@@ -99,7 +99,7 @@
       --dark-pop-color:  #ea8f10;
       --title-color: #824e06;
       --link-color: var(--text-color);
-      --hover-color: #7f6f61;
+      --hover-color: var(--dark-pop-color);
       
       /* hljs */
       --hljs-text-color: #444;
@@ -314,6 +314,13 @@ footer {
     margin: 4px 0;
     padding: 16px 32px;
     text-align: center;
+    box-shadow: 0 0 1rem #ea8f1010;
+    text-decoration: none;
+}
+
+.project:hover {
+    color: inherit;
+    background-color: var(--dark-pop-color);
 }
 
 .project h2 {
